mobile overflow axis X q&d fix

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,3 +1,6 @@
+body{
+  overflow-x: hidden;
+}
 .v-application{
   img{
     max-width: 100%;
@@ -8,5 +11,5 @@
   }
 .v-divider.half{
   margin: 0 20%;
-}
+  }
 }
